HTML Questions finished
Added all the trivia questions into the html.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class= "container">
+<div class= "questions">
 
 	<h1>Jupiter's Ultimate Roman Trivia!</h1>
 
@@ -49,14 +49,40 @@
 		<input type="radio" name="question5" value="Dictator for Life"> Dictator For Life
 		<input type="radio" name="question5" value="Emperor"> Emperor
 
-	<h2> 6.  </h2>
+	<h2> 6. What Roman city was destroyed by the volcano Mt. Vesuvius?  </h2>
 
+		<input type="radio" name="question6" value="Pompeii"> Pompeii
+		<input type="radio" name="question6" value="Capua"> Capua
+		<input type="radio" name="question6" value="Brundisium"> Brundisium
+		<input type="radio" name="question6" value="Mutina"> Mutina
 
+	<h2> 7. What river to Julius Caesar cross when he famously said "The die is cast" </h2>
 
+		<input type="radio" name="question7" value="The Rhine"> The Rhine
+		<input type="radio" name="question7" value="The Tiber"> The Tiber
+		<input type="radio" name="question7" value="The Danube"> The Danube
+		<input type="radio" name="question7" value="The Rubicon"> The Rubicon
 
+	<h2> 8. Who was the first Roman Emperor?</h2>
 
+		<input type="radio" name="question8" value="Julius Caesar"> Julius Caesar
+		<input type="radio" name="question8" value="Augustus Caesar"> Augustus Caesar
+		<input type="radio" name="question8" value="Pompieus Magnus"> Pompieus Magnus
+		<input type="radio" name="question8" value="Cato The Elder"> Cato Ther Elder
 
+	<h2> 9. Under which Emperor was Britannia (Britain) conquered? </h2>
 
+		<input type="radio" name="question9" value="Nero"> Nero
+		<input type="radio" name="question9" value="Claudius"> Claudius
+		<input type="radio" name="question9" value="Vespasian"> Vespasian
+		<input type="radio" name="question9" value="Marcus Aerulius"> Marcus Aerulius
+
+	<h2> 10.Under the Emperor Constantine the Great the empire was divided in half. Which city became the eastern capitol and was renamed Constantinople? </h2>
+
+		<input type="radio" name="question10" value="Athens"> Athens
+		<input type="radio" name="question10" value="Ephesus"> Ephesus
+		<input type="radio" name="question2" value="Carthago Nova"> Carthago Nova
+		<input type="radio" name="question2" value="Byzantium"> Byzantium
 
 
 
