Getting timer and start to work
Trying to get the timer and game stat button to work. Not going well

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<div class= "questions">
+	<div id= "start-display">
+
+		<h1>Jupiter's Ultimate Roman Trivia!</h1>
+
+		<button id = "start-game">Start Game</button>
+		
+
+	</div>
+
+<div id= "questions-display">
 
 	<h1>Jupiter's Ultimate Roman Trivia!</h1>
 
